<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_margin="16dp"
    android:layout_height="wrap_content">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="match_parent"
            android:fontFamily="sans-serif-regular"
            android:textColor="@android:color/black"
            android:padding="5dp"
            android:id="@+id/writeNotesTitle"
            android:layout_height="wrap_content" />

        <EditText
            android:layout_width="match_parent"
            android:id="@+id/writeNotes"
            android:maxHeight="200dp"
            android:textColor="@android:color/black"
            android:fontFamily="sans-serif-light"
            android:layout_height="wrap_content" />

        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="horizontal"
            android:layout_margin="5dp"
            android:layout_height="wrap_content">

            <View
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"/>

            <Button
                android:background="@color/pomegrantate"
                android:layout_width="wrap_content"
                android:layout_marginRight="5dp"
                android:minHeight="0dp"
                android:padding="5dp"
                android:minWidth="0dp"
                android:text="@string/write_notes_cancel"
                android:id="@+id/writeNotesCancel"
                android:layout_height="wrap_content" />
            <Button
                android:id="@+id/writeNotesLater"
                android:text="@string/write_notes_later"
                android:minHeight="0dp"
                android:padding="5dp"

                android:minWidth="0dp"
                android:background="@color/civi_green"
                android:layout_width="wrap_content"
                android:layout_marginRight="2dp"

                android:layout_height="wrap_content" />
            <Button
                android:layout_width="wrap_content"
                android:id="@+id/writeNotesDone"
                android:minHeight="0dp"
                android:padding="5dp"

                android:minWidth="0dp"
                android:background="@color/civi_green"
                android:text="@string/write_notes_done"

                android:layout_height="wrap_content" />

        </LinearLayout>

    </LinearLayout>

</android.support.v7.widget.CardView>