<?xml version="1.0" encoding="utf-8"?>

<FrameLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/civi_gray"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

<LinearLayout
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/civi_green"
        android:id="@+id/selectionTitle"
        android:padding="16dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tvFieldSelectionTitle"
            android:layout_width="match_parent"
            android:text="@string/contact_type_selector_title"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-condensed"
            android:textColor="@android:color/white"
            android:textSize="30sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-light"
            android:text="@string/field_selection"
            android:textColor="@android:color/white"
            android:textSize="18sp" />

    </LinearLayout>


    <android.support.design.widget.TabLayout
        android:id="@+id/fieldTabLayout"
        android:background="@color/civi_green"
        app:tabIndicatorHeight="5dp"
        app:tabIndicatorColor="@color/civi_blue"
        app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">



        <android.support.v4.view.ViewPager
            android:id="@+id/fieldPager"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />


        <Button
            android:id="@+id/fabFields"
            android:layout_width="wrap_content"
            android:layout_gravity="bottom|right"
            android:minHeight="0dp"
            android:minWidth="0dp"
            android:padding="10dp"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/ic_navigate_next_white_24dp"
            android:backgroundTint="@color/civi_blue"
            android:layout_margin="25dp" />

    </FrameLayout>

</LinearLayout>

    <LinearLayout
        android:id="@+id/waitScreen"
        android:orientation="vertical"
        android:background="@android:color/white"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_gravity="center"
            android:id="@+id/civilogoRotate"
            android:src="@drawable/civilogo"
            android:layout_weight="1"
            android:layout_height="0dp" />

        <TextView
            android:layout_width="match_parent"
            android:textColor="@android:color/black"
            android:fontFamily="sans-serif-condensed"
            android:text="@string/authenticating"
            android:textSize="30sp"
            android:id="@+id/waitText"
            android:layout_gravity="bottom"
            android:layout_marginBottom="32dp"
            android:layout_marginLeft="16dp"
            android:layout_height="wrap_content" />



        </LinearLayout>
    </FrameLayout>