<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:app="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/civi_gray">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <View
            android:layout_width="match_parent"
            android:layout_height="72dp"
            android:background="@color/civi_blue" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fillViewport="true">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <android.support.v7.widget.CardView
                        android:id="@+id/cardLogin"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginBottom="20dp"
                        android:layout_marginLeft="20dp"
                        android:layout_marginRight="20dp"
                        android:padding="20dp"
                        android:layout_marginTop="48dp"
                        android:background="@android:color/white"
                        card_view:cardPreventCornerOverlap="false"
                        card_view:cardCornerRadius="4dp">


                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:orientation="vertical"
                            android:paddingLeft="5dp"
                            android:paddingRight="5dp"
                            android:paddingBottom="5dp"
                            android:paddingTop="110dp">

                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:orientation="vertical">

                                <TextView
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:text="@string/establish_connection"
                                    android:fontFamily="sans-serif-regular"
                                    android:textColor="@android:color/black"
                                    android:textSize="18sp"
                                    android:textStyle="bold" />

                                <TextView
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:layout_marginTop="10dp"
                                    android:fontFamily="sans-serif-regular"
                                    android:text="@string/site_key"
                                    android:textColor="@android:color/black" />

                                <EditText
                                    android:id="@+id/etSiteKey"
                                    android:layout_width="match_parent"
                                    android:fontFamily="sans-serif-light"
                                    android:layout_height="wrap_content"
                                    android:textColor="@android:color/black" />



                                <TextView
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:fontFamily="sans-serif-regular"
                                    android:layout_marginTop="10dp"
                                    android:text="@string/api_key"
                                    android:textColor="@android:color/black" />


                                <EditText
                                    android:id="@+id/etApiKey"
                                    android:layout_width="match_parent"
                                    android:fontFamily="sans-serif-light"
                                    android:layout_height="wrap_content"
                                    android:textColor="@android:color/black" />

                                <TextView
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:fontFamily="sans-serif-regular"
                                    android:layout_marginTop="10dp"
                                    android:text="@string/website_url"
                                    android:textColor="@android:color/black" />


                                <EditText
                                    android:id="@+id/etWebsiteUrl"
                                    android:layout_width="match_parent"
                                    android:fontFamily="sans-serif-light"
                                    android:layout_height="wrap_content"
                                    android:textColor="@android:color/black" />
                            </LinearLayout>




                            <LinearLayout
                                android:id="@+id/fabSaveKeysHolder"
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:gravity="right|bottom">

                                <android.support.design.widget.FloatingActionButton
                                    android:id="@+id/fabSaveKeys"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_alignBottom="@id/cardLogin"
                                    android:layout_alignRight="@id/cardLogin"
                                    app:borderWidth="0dp"
                                    android:layout_margin="10dp"
                                    android:elevation="5dp" />

                            </LinearLayout>

                        </LinearLayout>

                    </android.support.v7.widget.CardView>
                </LinearLayout>


                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:src="@drawable/cividroid_logo" />

            </RelativeLayout>



        </ScrollView>


    </RelativeLayout>




</RelativeLayout>